assets/scss/components/_footer.scss
$mobile_footer_height: auto; // 500px;
$desktop_footer_height: 106px;
// access and copyright info below the main navigational footer
$desktop_accessrights_height: 66px;
$mobile_accessrights_height: 242px;

body > footer {
  position: relative;
  overflow: visible; // make sure logos are not truncated

  // apply margins/padding to containers,
  // because roots svg needs to be full width

  @include for-desktop-up {
    // height: $desktop_footer_height;
    margin: 0;
    padding: 0;

    // needs to match the grid of the timetree and leaf details panel
    display: grid;
    // reserve 32% for the panel, but limit the size of the tree portion
    grid-template-columns: calc(68% - 38px) auto;
    column-gap: 38px; // space between panel and timetree
    margin-right: 40px; // needs to match right margin outside the panel
    grid-template-areas: "nav" "logos";

    // grid-template-columns: auto $desktop_panel_width; // 410px;
    // column-gap: $column_gap; //  38px; // space between panel and timetree
  }

  nav {
    grid-area: nav;
    z-index: 2; // display on top of the svg with roots

    // use flex to space out footer links evenly
    display: flex;
    flex-direction: column;
    gap: 8px;

    margin: 29px 95px 48px;

    // limit footer nav width on larger screens
    @include for-desktop-up {
      flex-direction: row;
      width: 100%;
      max-width: 100%;
      gap: auto;
      margin: 0;
    }

    > * {
      flex-grow: 1;
    }
    // make links sufficiently large tap targets
    a {
      text-align: center;
      display: block;
      font-size: 16px;
      height: 24px;

      @include for-desktop-up {
        font-size: 18px;
        height: 48px;

        height: $desktop_footer_height;

        // vary vertical height based on position
        &:nth-child(1) {
          padding-top: calc(0.4 * #{$desktop_footer_height});
        }
        &:nth-child(2) {
          padding-top: calc(0.65 * #{$desktop_footer_height});
        }
        &:nth-child(3) {
          padding-top: calc(0.2 * #{$desktop_footer_height});
        }
        &:nth-child(4) {
          padding-top: calc(0.5 * #{$desktop_footer_height});
        }
        &:nth-child(5) {
          padding-top: calc(0.3 * #{$desktop_footer_height});
        }
      }
    }

    a,
    a:link,
    a:hover,
    a:visited {
      text-decoration: none;

      // add same text shadow as labels in the tree,
      // for visibility over the roots
      text-shadow: $nav-bg-color 0px 0px 4px;

      &[aria-current="page"] {
        font-weight: 900;
      }
    }
  }

  svg {
    grid-area: nav;
    pointer-events: none;

    @include for-mobile {
      position: absolute;
      top: 0;
    }

    @include for-desktop-up {
      position: relative;
      grid-area: nav; // Chrome complains about this
      width: 100%; /* must match the tree */
      // border: 1px solid yellow;  /* for debugging position/size *
    }
  }

  #publisher {
    display: flex;
    justify-content: flex-end;
    flex-direction: column;

    align-items: center;
    padding: 0px;
    margin: 0 auto 0;
    gap: 0;
    margin: 0 auto 30px;
    width: 206px;

    #version:after {
      content: ", ";
    }

    @include for-desktop-up {
      // layout as column but wrap, so text is next to cdh logo
      flex-wrap: wrap;
      justify-content: flex-start;
      // limit to footer height to force wrapping
      height: $desktop_footer_height;
      // compensate for right margin on container
      // margin: 0 -40px 18px;
      // compensate for right margin on containr and align with PU logo in next line
      margin: 0 -28px 18px;
      width: auto;
      padding: 8px 16px;
      gap: 0;
      align-items: end;

      /* adjust order for desktop using flex ordering */
      #version-year {
        order: 2;
        width: 3em;
        text-align: right;
      }
      #version:after {
        content: "";
      }
      a[href*="cdh"] {
        order: 3;
      }
    }

    p {
      font-size: 0.7rem;
      line-height: 0.95rem;

      @include for-desktop-up {
        font-size: 0.7rem;
        line-height: 1rem;
        padding: 0;
        margin: 0;
      }

      &#built-by {
        text-align: right;

        @include for-desktop-up {
          margin: 0;
          /* top padding to adjust for alignment with text in CDH logo */
          padding: 10px 0 0;
          /* container width minus CDH logo + space */
          width: calc(100% - 140px);
        }
      }
    }

    img {
      max-width: 100%;

      @include for-desktop-up {
        height: 50px;
        padding-top: 5px;
      }

      &[src*="cdh"] {
        height: 75px;
        aspect-ratio: 4/3;

        @include for-desktop-up {
          height: 90px;
        }
      }
    }
  }
}

#version,
#copyright,
a[href*="license"] {
  text-decoration: none;
}

#access-rights {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  overflow: hidden;
  padding: 8px 0 18px;
  gap: 8px;
  background-color: $nav-bg-color;

  width: 100vw;
  border-top: 1px solid $offwhite;
  font-size: 0.8rem; // 16px

  @include for-desktop-up {
    font-size: 0.9rem; // 18px
    flex-direction: row;
    gap: 20px;
    padding: 4px 28px;

    > * {
      // margin: 12px 20px 0 0;
      margin: 12px 0 0 0;
    }

    /* allow license to grow; extra flex space between logos and cc license */
    a[rel="license"] {
      flex-grow: 2;
      text-align: right;
      align-self: baseline;
      padding-top: 5px;
    }
  }

  img {
    max-width: 100%;
    height: 50px;
    margin-bottom: 12px;

    @include for-desktop-up {
      min-width: 50px;
      margin-bottom: 0;
    }

    &[src*="naisip"] {
      aspect-ratio: 102/25;
    }
    &[src*="vizelab"] {
      aspect-ratio: 3/1;
    }
    &[src*="history"] {
      aspect-ratio: 5/2;
    }
    &[src*="english"] {
      aspect-ratio: 63/25;
    }
  }

  p {
    font-size: 0.8rem;
    line-height: 1.1rem;

    &#collab {
      @include for-desktop-up {
        align-self: flex-start;
      }
    }
  }

  a {
    text-decoration: none;
  }

  a[href*="accessibility"] {
    text-transform: uppercase;
    text-decoration: solid underline $offwhite 1px;
    text-underline-offset: 12px;
    @include for-mobile {
      padding: 12px 20px;
    }
  }

  #copyright {
    white-space: nowrap;
    i {
      vertical-align: text-bottom;
    }

    @include for-desktop-up {
      margin-left: 1.4rem;
      i {
        margin-right: 0.3rem;
      }
    }
  }

  a[rel="license"] {
    @include for-mobile {
      width: 100%;
      text-align: center;
      border-top: 1px solid $nearwhite;
      margin-top: 12px;
      padding-top: $margin;
    }

    img {
      width: 73px;
      height: 24px;
      vertical-align: text-bottom;
      @include for-mobile {
        margin-bottom: 0;
      }
    }

    @include for-desktop-up {
      margin-left: 1rem;
    }
  }

  a[href^="https://princeton.edu"]
  {
    img {
      width: 150px;
      height: 42px;
      aspect-ratio: 4/3;
    }

    padding: 16px 0 0;

    @include for-desktop-up {
      padding: 0;
      margin-left: auto; // auto margin = justify item flex-end
      margin-right: 0;
    }
  }
}

